# blash

./: .gitignore  .travis.yml  README.md  blash.cabal  stack.yaml  vec.cabal
src/: Blash.hs  BlashImpl.hs  Main.hs  Vec.hs  VecImpl.hs  VecTryOut.hs
tests/: Main.hs  OpenBLAS1.hs  TestBlash.hs  TestBlashData.hs  TestBlashImpl.hs  TestMain.hs  TestVec.c  TestVec.hs  TestVec_.hs  slsqp.c
tests/atest/: atest.c  atest.h
tests/blas/include/: openblas_config.h
tests/blas/lib/: libopenblas.dylib
tests/blas/lib/cmake/openblas/: OpenBLASConfig.cmake
tests/nlopt/: config.h  slsqp.c  slsqp.h
