name:                blash
version:             0.1.1.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/wyn/blash#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Parry
maintainer:          simon.parry@coshx.co.uk
copyright:           2015 CoshX Ltd
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blash, BlashImpl
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
                     , primitive
  ghc-options:         -Wall
                     
test-suite test-blash
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestBlash.hs
  build-depends:       base >=4.7 && <5
                     , blash
                     , vector
                     , inline-c
                     , hspec >= 2
                     , QuickCheck
                     , quickcheck-assertions >= 0.2.0
                     , process
  default-language:    Haskell2010

  -- Here the corresponding C sources must be listed for every module
  -- that uses C snippets.  Presumably we could automatically generate
  -- this.
  c-sources:           tests/TestBlash.c
  cc-options:          -Wall
  ghc-options:         -Wall
  include-dirs:        tests/atest
                     , tests/blas/include
  extra-lib-dirs:      tests/atest
                     , tests/blas/lib
  extra-libraries:     atest
                     , openblas

