name:                vec
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vec
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
                     , primitive
                     
test-suite test-vec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestVec.hs
  build-depends:       base >=4.7 && <5
                     , vector
                     , random
                     , primitive
                     , inline-c
                     , hspec >= 2
                     , QuickCheck
  default-language:    Haskell2010

  -- Here the corresponding C sources must be listed for every module
  -- that uses C snippets.  Presumably we could automatically generate
  -- this.
  c-sources:           tests/TestVec.c
  cc-options:          -Wall
  ghc-options:         -Wall
