name:                vec
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vec#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Parry
maintainer:          simon.parry@coshx.co.uk
copyright:           2015 CoshX Ltd
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Vec, VecImpl
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
                     , primitive
  ghc-options:         -Wall
                     
test-suite test-vec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestVec.hs
  build-depends:       base >=4.7 && <5
                     , vec
                     , vector
                     , inline-c
                     , hspec >= 2
                     , QuickCheck
                     , process
  default-language:    Haskell2010

  -- Here the corresponding C sources must be listed for every module
  -- that uses C snippets.  Presumably we could automatically generate
  -- this.
  c-sources:           tests/TestVec.c
  cc-options:          -Wall
  ghc-options:         -Wall
  include-dirs:        tests/atest
                     , tests/nlopt
--                     , tests/CBLAS/include
  extra-lib-dirs:      tests/atest
                     , tests/nlopt
--                     , tests/CBLAS/lib
  extra-libraries:     atest
                     , slsqp
--                     , cblas
